<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of SmartTransport
  ~
  ~ SmartTransport is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SmartTransport is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SmartTransport.  If not, see <http://www.gnu.org/licenses/>.
-->
<!--
  ~ This file is part of SmartTransport
  ~
  ~ SmartTransport is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SmartTransport is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SmartTransport.  If not, see <http://www.gnu.org/licenses/>.
-->
<!--
  ~ This file is part of SmartTransport
  ~
  ~ SmartTransport is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SmartTransport is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SmartTransport.  If not, see <http://www.gnu.org/licenses/>.
-->
<!--
  ~ This file is part of SmartTransport
  ~
  ~ SmartTransport is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SmartTransport is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SmartTransport.  If not, see <http://www.gnu.org/licenses/>.
-->
<!--
  ~ This file is part of SmartTransport
  ~
  ~ SmartTransport is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SmartTransport is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SmartTransport.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">SmartTrans</string>
    <string name="text_depature_times">%1$s min (%2$s)</string>
    <string name="text_locating">locating...</string>
    <string name="text_loading">loading...</string>
    <string name="pref_publicnetwork_title">Transport Network</string>
    <string name="pref_donate">Donate</string>
    <string name="pref_about">About</string>
    <string name="pref_feedback">Feedback</string>
    <string name="configuration">Smart Transport - Config</string>
    <string name="dialog_notimplemented">Not implemented yet</string>
    <string name="pref_publicnetwork">pre_network</string>
    <string name="pref_transportNetwork_default">RtProvider</string>
    <string name="feedback_subject">SmartTransport Feedback</string>
    <string name="feedback_mailaddress">dominik.helleberg+SmartTrans@gmail.com</string>
    <string name="feedback_mailsend">Send Mail</string>
    <string name="text_nostations">Ups, no stations found nearby. Click to retry</string>
    <string name="text_selectProvider">Swipe and click to select provider</string>
    <string name="lkey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAz352KXfGipr7Sg7C9t9Wfp4kA6WR5p5Y/pb22eav7ugb0O1qSsHWJgkqYRgPSqqNyJLy274Yvz0CRl36QQUtmCVHLpL8pvLwa8rsaFVvsrAz987bFEWKYmO0npJOjh6ticRfFW9+rw9RwpUMuA6ti1vce5+PqTnBw7VLQxGVq6reSTsKfN6qtUiy0jZHUxnO9wbdAzz+xhdZO+1XHEAlrDwDyIvacCF+8r4DYf/nhMlVEM63wUKVdHKn2Dnwx5AvgS3kdNfFJftz/QTNwTq1eti8yu9vCbE8cVQl18psTaggsS73HWNSLjK+SmijVaKKRDF1WdiRrPyqKeuaxsWk5QIDAQAB</string>
    <string name="donate_button_text">Donate!</string>
    <string name="donate_1">small donation: %1s</string>
    <string name="donate_2">donation: %1s</string>
    <string name="donate_3">awesome donation: %1s</string>
    <string name="donate_progress_dialog_title">Donate-Options...</string>
    <string name="donate_progress_dialog_message">loading...</string>
    <string name="title_activity_donate_thanks">Thanks!!</string>
    <string name="thanks">Thanks!</string>
    <string name="donate_text">If you do like the App and want to motivate me keep on developing it, this is the way to go...</string>
    <string name="title_activity_donate">Thank you!</string>
    <string name="title_activity_about">About</string>
    <string name="about">Copyright 2013 Dominik Helleberg\n
    This program comes with ABSOLUTELY NO WARRANTY; for details click here: \nhttps://github.com/dhelleberg/smartwatch_transport\n
    This is free software, and you are welcome to redistribute it
    under certain conditions;\n\n
    This software uses the great work of Andreas Schildbach by integrating the "public-transport-enabler" lib. \n
    https://code.google.com/p/public-transport-enabler/\n</string>
    <string name="text_nolocationprovider">Sorry, you have no active location provider!</string>
    <string name="mode_select_nearby">Nearby</string>
    <string name="mode_selection_favourites">Favourites</string>
    <string name="text_nofavs">No favorite stations so far. Long press in search results to add one!</string>
    <string name="title_activity_fav_list">FavListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pref_favlist">Favourites</string>
    <string name="text_savefavs">Saved as Favorite</string>
    <string name="title_activity_pebble">PebbleActivity</string>

</resources>
